--- a/ch11-regular-expressions/re.ipynb
+++ b/ch11-regular-expressions/re.ipynb
@@ -1734,7 +1734,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "There are many resources you can use to thoroughly learn regular expressions, so I won't try to cover them completely here. I will mostly try to introduce the general idea and show you some useful regexes you could steal.\n",
@@ -1757,9 +1757,9 @@
     "    12\n",
     "    13\tfile = args[0]\n",
     "    14\n",
-    "    15\tfloat_ = r'[+-]?\\d+\\.*\\d*'\n",
-    "    16\tll1 = re.compile('(' + float_ + ')\\s*[,_]\\s*(' + float_ + ')')\n",
-    "    17\tll2 = re.compile('(' + float_ + ')(?:\\s*([NS]))?(?:\\s*,)?\\s+(' + float_ +\n",
+    "    15\tfloat_re = r'[+-]?\\d+\\.*\\d*'\n",
+    "    16\tll1 = re.compile('(' + float_re + ')\\s*[,_]\\s*(' + float_re + ')')\n",
+    "    17\tll2 = re.compile('(' + float_re + ')(?:\\s*([NS]))?(?:\\s*,)?\\s+(' + float_re +\n",
     "    18\t                 ')(?:\\s*([EW])?)')\n",
     "    19\tloc_hms = r\"\"\"\n",
     "    20\t\\d+\\.\\d+'\\d+\\.\\d+\"\n",
